--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cached_network_image:
   flutter_svg:
   lottie:
+  smooth_page_indicator:
 # Data Storage
   shared_preferences:
 # Device preview
